# fft_net

./: LICENSE  README.md  load_data.sh  model.py  pyproject.toml
.github/workflows/: tests.yml
fft_net/: __init__.py  config.yml  data.py  model.py  train.py
scripts/: prepare_ilsvrc2012.py  run_experiments.py  split_cub.py  vast_collect_results.py  vast_run_experiment.py
tests/: test_data.py  test_models.py
