[project]
name = "fft-net"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "hydra-core>=1.3.2",
    "pytest>=8.4.2",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]

[build-system]
requires = [
    "setuptools>=61",
    "setuptools_scm[toml]>=6.2",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["fft_net"]
